# linear-regression

./: pyproject.toml
.ipynb_checkpoints/: regression-checkpoint.ipynb
